--- a/lab1/index.html
+++ b/lab1/index.html
@@ -13,13 +13,13 @@
     <header>
         <table class="menu">
             <tr>
-                <td class="menu-item"><a href="index.html" target="_blank"><img class="index-logo" src="logo.png" /></a>
+                <td class="menu-item1"><a href="index.html"><img class="index-logo" src="./img/logo.png" /></a>
                 </td>
-                <td class="menu-item"><a href="https://www.youtube.com/" target="_blank"><b>Audi</b></a></td>
-                <td class="menu-item"><a href="https://www.youtube.com/" target="_blank"><b>BMW</b></a></td>
-                <td class="menu-item"><a href="https://www.youtube.com/" target="_blank"><b>Opel</b></a></td>
-                <td class="menu-item"><a href="https://www.youtube.com/" target="_blank"><b>Peugeot</b></a></td>
-                <td class="menu-item"><a href="https://www.youtube.com/" target="_blank"><b>Mercedes</b></a></td>
+                <td class="menu-item"><a href="audi.html"><b>Audi</b></a></td>
+                <td class="menu-item"><a href="bmw.html"><b>BMW</b></a></td>
+                <td class="menu-item"><a href="opel.html"><b>Opel</b></a></td>
+                <td class="menu-item"><a href="peugeot.html"><b>Peugeot</b></a></td>
+                <td class="menu-item"><a href="kontakt.html"><b>Kontakt</b></a></td>
             </tr>
         </table>
     </header>
@@ -35,7 +35,7 @@
                 <li class="ul-item">1884 r. – został zbudowany pierwszy pojazd benzynowy</li>
             </ul>
         </div>
-        <img class="content-img" src="firstcar.jpg" />
+        <img class="content-img" src="./img/firstcar.jpg" />
         <p class="content-text">
             Pierwszym udokumentowanym pojazdem napędzanym silnikiem cieplnym był parowy wehikuł francuskiego inżyniera
             wojskowego Nicolasa-Josepha Cugnot
@@ -56,7 +56,7 @@
             uczestnictwa w konkursie Rainhill Trials,
             którego zwycięska maszyna miała być używana przez kolej Liverpool–Manchester﻿[w innych językach]. Rakieta
             zwyciężyła, ponieważ jako jedyna przetrwała
-            <img class="content-imgr" src="engine.jpg" />wszystkie próby, a jej osiągi odpowiadały organizatorom. 15
+            <img class="content-imgr" src="./img/engine.jpg" />wszystkie próby, a jej osiągi odpowiadały organizatorom. 15
             września 1830 miał miejsce pierwszy śmiertelny
             wypadek w historii kolei – podczas
             oficjalnego otwarcia linii Liverpool – Manchester zginął William Huskisson.
